<resources>
    <string name="app_name">SwanExpressions</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_expression_builder">Start Expression Builder</string>
    <string name="action_save">Save</string>
    <string name="action_remove_last_item">Remove last item</string>
    <string name="action_restore_last_item">Restore last item</string>

    <string name="expression_sensor">Sensor Expression</string>
    <string name="expression_sensor_sum">Local or remote sensor</string>
    <string name="expression_constant">Constant Expression</string>
    <string name="expression_constant_sum">A number or text</string>
    <string name="expression_math">Math Expression</string>
    <string name="expression_math_sum">\"+\", \"-\", \"*\", \"/\", \"%\"</string>
    <string name="expression_comparison">Comparison Expression</string>
    <string name="expression_comparison_sum">\"==\", \"&gt;=\", \"&lt;=\", \"&gt;\", \"&lt;\", \"!=\", \"regex\", \"contains\"</string>
    <string name="expression_logic">Logic Expression</string>
    <string name="expression_logic_sum">\"AND\", \"OR\"</string>
    <string name="expression_value">Value Expression</string>
    <string name="expression_tri_state">Tri-State Expression</string>
    <string name="expression_value_operator">Value Operator Expression</string>
    <string name="expression_tri_state_operator">Tri-State Operator Expression</string>
    <string name="expression_tri_math_operator">Tri-Math Operator Expression</string>

    <string name="activity_title_builder">Build</string>

    <string name="label_name">NAME</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_expression_not_valid">The expression is not valid</string>
    <string name="error_remove_not_possible">Remove not possible</string>
    <string name="error_restore_not_possible">Restore not possible</string>

    <string name="label_sensor">SENSOR</string>
    <string name="label_value_path">VALUE PATH</string>
    <string name="label_history">HISTORY</string>
    <string name="label_history_window">WINDOW</string>
    <string name="label_history_unit">UNIT</string>
    <string name="label_history_reduction_mode">REDUCTION MODE</string>

    <string name="label_constant">CONSTANT</string>
    <string name="label_math_operator">MATH OPERATOR</string>
    <string name="label_comparison_operator">COMPARISON OPERATOR</string>
    <string name="label_logic_operator">LOGIC OPERATOR</string>

    <string name="label_constant_camelcase">Constant</string>

    <string name="math_operator_plus">+</string>
    <string name="math_operator_minus">-</string>
    <string name="math_operator_times">*</string>
    <string name="math_operator_divide">-</string>
    <string name="math_operator_modulo">%</string>


    <string name="comparison_operator_equals">==</string>
    <string name="comparison_operator_greater_equals">&gt;=</string>
    <string name="comparison_operator_less_equals">&lt;=</string>
    <string name="comparison_operator_greater">&gt;</string>
    <string name="comparison_operator_less">&lt;</string>
    <string name="comparison_operator_not_equals">!=</string>
    <!--<string name="comparison_operator_regex">!=</string>-->
    <string name="comparison_operator_contains">contains</string>

    <string name="tri_operator_and">AND</string>
    <string name="tri_operator_or">OR</string>

    <string name="tri_operator_and_value">&amp;&amp;</string>
    <string name="tri_operator_or_value">||</string>

</resources>
