<?xml version="1.0" encoding="utf-8"?>
<interdroid.swan.swanexpressions.views.ValueSelectionView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/selection_value_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:text="@string/expression_sensor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:layout_weight="0.4"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/expression_sensor_sum"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/selection_value_constant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:text="@string/expression_constant"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:layout_weight="0.4"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/expression_constant_sum"/>

    </LinearLayout>


</interdroid.swan.swanexpressions.views.ValueSelectionView>