<?xml version="1.0" encoding="utf-8"?>
<interdroid.swan.swanexpressions.views.TriMathOperatorSelectionView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:text="@string/expression_math"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_small"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:text="@string/expression_logic"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_small"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tri_math_operator_math_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/math_operator_plus"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <TextView
                    android:id="@+id/tri_math_operator_tri_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/tri_operator_and"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tri_math_operator_math_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/math_operator_minus"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <TextView
                    android:id="@+id/tri_math_operator_tri_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/tri_operator_or"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tri_math_operator_math_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/math_operator_times"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tri_math_operator_math_divide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/math_operator_divide"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tri_math_operator_math_modulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:text="@string/math_operator_modulo"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_medium"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_500"
                    android:layout_weight="0"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</interdroid.swan.swanexpressions.views.TriMathOperatorSelectionView>