<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensor_expression_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_half_vertical_margin"
    android:paddingBottom="@dimen/activity_half_vertical_margin"
    android:paddingLeft="@dimen/activity_half_horizontal_margin"
    android:paddingRight="@dimen/activity_half_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sensor"
        android:textColor="@color/text_secondary_color"
        android:textSize="@dimen/abc_text_size_small_material"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/sensor_expression_sensor_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_settings_black_36dp"
            android:layout_gravity="center_vertical|right"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_value_path"
        android:textColor="@color/text_secondary_color"
        android:textSize="@dimen/abc_text_size_small_material"/>

    <Spinner
        android:id="@+id/sensor_expression_value_path_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_history"
        android:textColor="@color/text_secondary_color"
        android:textSize="@dimen/abc_text_size_small_material"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sensor_expression_history_window_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:digits="0123456789"
            android:text="0"/>

        <Spinner
            android:id="@+id/sensor_expression_history_unit_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"/>

        <Spinner
            android:id="@+id/sensor_expression_history_reduction_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"/>

    </LinearLayout>

</LinearLayout>